ola-parser/src/testdata/syntaxTests/parsing/constructor_public_public.sol
contract C {
    constructor() {}
}
// ----
// ParserError 9439: (36-42): Visibility already specified as "public".
